<resources>
    <string name="app_name">Alphastrah</string>
    <string name="navigation_drawer_open">Открыть navigation drawer</string>
    <string name="navigation_drawer_close">Закрыть navigation drawer</string>
    <string name="title_profile">Профиль</string>
    <string name="title_policies">Полисы</string>
    <string name="title_activity_login">Войти</string>
    <string name="title_loading">Загрузка</string>
    <string name="title_activity_notifications">Уведомления</string>
    <string name="data_load_error">Ошибка при загрузке данных</string>
    <string name="title_enter">Вход в систему</string>
    <string name="notifications_list">Список уведомлений</string>
    <string name="information">Информация</string>
    <string name="content">Содержание</string>

    <string name="title_phone">Телефон</string>
    <string name="title_fio">ФИО</string>
    <string name="title_email"> Email </string>
    <!-- Strings related to forms (login, send email) -->
    <string name="login_error">Ошибка при авторизации</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="error_invalid_email">Email адрес неверный</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Обязательное поле</string>

    <string name="title_activity_send_email">Отправить email</string>
    <string name="action_send">Отправить</string>
    <string name="prompt_subject">Заголовок</string>
    <string name="prompt_body">Сообщение</string>
    <string name="title_activity_account">Профиль</string>
</resources>
